with notification by gmail

--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,5 @@ MONGODB_DATABASE=EnquiryForm
 PORT=5000
 MONGO_URL=mongodb+srv://bani9717:banisingh@enquiryform.dg8rm.mongodb.net/EnquiryForm
 JWT_SECRET=iit@bani
+EMAIL_USER=banidhanagar9717@gmail.com
+EMAIL_PASS=pwuuflogmrelmukj
