--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.14.0",
     "mongoose": "^8.11.0",
+    "nodemailer": "^6.10.0",
     "parser": "^0.1.4",
     "uuid": "^11.1.0"
   },
